// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/omega/gears/component renders \`forward\` 1`] = `
<Gears
  forward={
    Object {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
  pattern="MOCK OMEGA PATTERN"
  reverse={Object {}}
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/omega/gears/component renders \`reverse\` 1`] = `
<Gears
  forward={Object {}}
  pattern="MOCK OMEGA PATTERN"
  reverse={
    Object {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/omega/gears/component renders \`reverse\` and \`forward\` 1`] = `
<Gears
  forward={
    Object {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
  pattern="MOCK OMEGA PATTERN"
  reverse={
    Object {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/omega/gears/component renders 1`] = `
<Gears
  forward={Object {}}
  pattern="MOCK OMEGA PATTERN"
  reverse={Object {}}
/>
`;
